package Modul_9;

public interface Email {
    String getEmail();
}
