package Modul_9;

public class Pemasaran  extends  Pegawai{
    private double bonus;

    double getBonus(){
        return bonus;
    }

    void setBonus(double myBonus){
        bonus = myBonus;
    }
    @Override
    double hitungGatot(){
        return getGapok()+bonus;
    }
    @Override
    double getTunjangan() {
        return bonus;
    }
    @Override
    String getStatus() { return "Pemasaran";}

    @Override
    public String getEmail() {
        return  getNpp() + "@marketing.usd.ac.id";
    }
}
